# Customer-Purchase-Propensity-Prediction

./: README.md  pyproject.toml
data_pipeline/data/processed/: .gitignore  df_processed_fe_optimized_v2.csv.dvc
data_pipeline/propensity_feature_store/propensity_features/feature_repo/: data_sources.py  feature_views.py  prepare_feast_data_v2.py
data_pipeline/scripts/: feature_engineering_v2_optimized.py  preprocessed_pyspark_001.ipynb  split_train_test.py
infra/docker/: .gitignore  README.md
infra/docker/airflow/: Dockerfile  docker-compose.yaml  requirements.txt
infra/docker/airflow/dags/: ctp_e2e_dags.py
infra/docker/mlflow/mlflow/: requirements.txt
model_pipeline/: README.md  requirements.txt
model_pipeline/notebooks/logistic_regression/: Logistic_Regression_Baseline.ipynb  train_logistic_regression.py  train_logistic_regression_v2.py
model_pipeline/notebooks/metrics/: logistic_regression_metrics.json  logistic_regression_v2_metrics.json
model_pipeline/src/config/: logistic_regression.yaml  xgboost.yaml
model_pipeline/src/data/: preprocessed.ipynb
model_pipeline/src/model/: xgboost_trainer.py
model_pipeline/src/run_sh/: eval.sh  train.sh
model_pipeline/src/scripts/: eval.py  train.py
model_pipeline/src/test/: conftest.py
model_pipeline/src/test/fixtures/: sample_config.yaml
model_pipeline/src/test/integration/: test_e2e.py  test_integration_training_pipeline.py
model_pipeline/src/test/unit/: test_experiment_tracker.py
serving_pipeline/: requirements.txt  ui.py
(+5 files in other folders)
