[project]
name = "customer-purchas-propensity-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.19",
    "dvc>=3.66.1",
    "dvc-s3>=3.3.0",
    "feast[redis]>=0.59.0",
    "google-generativeai>=0.8.6",
    "gradio>=6.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
